Fixed overflow on ,obile

--- a/assets/stylesheets/core.scss
+++ b/assets/stylesheets/core.scss
@@ -32,14 +32,6 @@
 //basics
 body {
 	overflow-x: hidden;
-	@media all and (max-width: 768px) {
-		position: absolute;
-    overflow-x: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-		width: 100vw;
-		height: 100vh;
-	}
 }
 section {
 
@@ -85,3 +77,16 @@ a {
 		display: none;
 		}
 	}
+
+@media all and (max-width: 768px) {
+	body,
+	html
+	{
+		position: absolute;
+	  overflow-x: hidden;
+	  overflow-y: auto;
+	  -webkit-overflow-scrolling: touch;
+		width: 100vw;
+		height: 100vh;
+	}
+}
