--- a/assets/stylesheets/theme/_glyphs.scss
+++ b/assets/stylesheets/theme/_glyphs.scss
@@ -23,7 +23,7 @@
 		height: 39px;
 		@media all and (max-width: 768px) {
 			width: 60px;
-			height: 43px;
+			height: 45px;
 		}
 	}
 	&-van {
